@@ -1,6 +1,7 @@
 package net.sourceforge.squirrel_sql.plugins.laf;
 
 import net.sourceforge.squirrel_sql.fw.util.SquirrelURLClassLoader;
+import net.sourceforge.squirrel_sql.fw.util.SystemInfo;
 import net.sourceforge.squirrel_sql.fw.util.log.ILogger;
 import net.sourceforge.squirrel_sql.fw.util.log.LoggerController;
 import org.apache.commons.lang3.StringUtils;
@@ -42,6 +43,16 @@ public class LAFLoader
                lafClass = Class.forName(lookAndFeelClassName);
             }
 
+            if(   false == silentAndNullable
+               && StringUtils.startsWithIgnoreCase(lookAndFeelClassName, "com.jgoodies")
+               && SystemInfo.isLinux())
+            {
+               String jgoodiesLinuxMsg =
+                  "JGoddies L&F display error: JGoddies Look and Feels on Linux leave tab titles empty at several places. If you are using JGoddies on Linux please consider switching to a Metal or FlatLaf Look and Feel.\n" +
+                  "Note: JGoodies does not offer open source updates for its Look and Feels anymore, see: http://www.jgoodies.com/downloads/libraries/";
+               s_log.error(jgoodiesLinuxMsg);
+            }
+
             laf = (LookAndFeel) lafClass.getDeclaredConstructor().newInstance();
          }
          catch (Throwable t)
@@ -57,12 +68,12 @@ public class LAFLoader
 
                if (StringUtils.containsIgnoreCase(t.toString(), jgoodiesWindowsLafErr))
                {
-                  String jgoodiesMsg = "JGoodies WindowsLookAndFeel Java 17 error:\n" +
+                  String jgoodiesMsg = "JGoodies WindowsLookAndFeel Java 17 error on MS Windows:\n" +
                         "Failed to load JGoodies WindowsLookAndFeel because it uses an internal com.sun API which from Java 17 on isn't accessible anymore.\n" +
-                        "For a workaround see bug #1507 at SourceForge: " +
-                        "https://sourceforge.net/p/squirrel-sql/bugs/1507\n" +
+                        "For a workaround add the Java-VM parameter --add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED to your <SquirrelInstallationDir>\\squirrel-sql.bat\n" +
+                        "For details see bug #1507 at SourceForge: https://sourceforge.net/p/squirrel-sql/bugs/1507\n" +
                         "Note that JGoodies does not offer open source updates for its Look and Feels anymore, see: http://www.jgoodies.com/downloads/libraries/\n" +
-                        "Also note: JGoddies Look and Feels leave tabs empty at several places. If you are using JGoddies please consider switching to a Metal or FlatLaf Look and Feel.\n" +
+                        "Also note: JGoddies Look and Feels on Linux leave tab titles empty at several places. If you are using JGoddies please consider switching to a Metal or FlatLaf Look and Feel.\n" +
                         "Detailed error message:";
                   s_log.error(jgoodiesMsg, t);
                }
